# SimpleServerCommunicationSystem

./: CMakeLists.txt  Dockerfile  README.md
include/: keyValueStore.h  protocol.h  sub.h  utils.h
src/: keyValueStore.c  main.c  protocol.c  sub.c  utils.c
